# moveit_boilerplate

./: .travis.yml  CMakeLists.txt  README.md  moveit.rosinstall  package.xml
archive/: arm_test_main.cpp  arm_testing.cpp  arm_testing.h
config/: camera_intrinsics.yaml  config_baxter.yaml  config_bot.yaml  config_example.yaml  config_jacob.yaml  moveit_base.yaml  moveit_ompl.yaml  picknik_baxter.yaml  picknik_debug_level.yaml  picknik_iiwa_7_r800.yaml  picknik_jacob.yaml  picknik_r3.yaml  shelf.yaml
docs/: overview.odg
include/moveit_base/: moveit_base.h
include/moveit_boilerplate/: OLD_planning_interface.h  boilerplate.h  debug_interface.h  deprecated.h  execution_interface.h  fix_state_bounds.h  get_planning_scene_service.h  manipulation_data.h  moveit_base.h  namespaces.h  planning_interface.h  remote_control.h  trajectory_io.h
include/moveit_manipulation/: execution_interface.h  fix_state_bounds.h  manipulation.h  manipulation_data.h  moveit_boilerplate.h  moveit_teleop.h  namespaces.h  planning_interface.h  remote_control.h  trajectory_io.h
include/moveit_manipulation/behaviors/: arm_testing.h  teleoperation.h
launch/: debug_settings.gdb  gdb_settings.gdb  iiwa_7_r800_pick.launch  iiwa_7_r800_rviz.launch  iiwa_7_r800_teleop.launch  moveit.rviz  moveit_base_main.launch  moveit_display.rviz
src/: OLD_planning_interface.cpp  boilerplate.cpp  debug_interface.cpp  example.cpp  execution_interface.cpp  fix_state_bounds.cpp  get_planning_scene_service.cpp  main.cpp  manipulation.cpp  manipulation_data.cpp  moveit_base.cpp  moveit_base_main.cpp  moveit_boilerplate.cpp  moveit_teleop.cpp  planning_interface.cpp  remote_control.cpp  trajectory_io.cpp
src/behaviors/: arm_test_main.cpp  arm_testing.cpp  teleoperation.cpp  teleoperation_main.cpp
trajectories/analysis/: arm_trajectory_1.csv  arm_trajectory_10.csv  arm_trajectory_100.csv  arm_trajectory_103.csv  arm_trajectory_106.csv  arm_trajectory_107.csv  arm_trajectory_108.csv  arm_trajectory_109.csv  arm_trajectory_11.csv  arm_trajectory_110.csv  arm_trajectory_111.csv  arm_trajectory_112.csv  arm_trajectory_114.csv  arm_trajectory_115.csv  arm_trajectory_116.csv  arm_trajectory_117.csv  arm_trajectory_118.csv  arm_trajectory_12.csv  arm_trajectory_120.csv  arm_trajectory_123.csv  arm_trajectory_124.csv  arm_trajectory_125.csv  arm_trajectory_126.csv  arm_trajectory_128.csv  arm_trajectory_129.csv  arm_trajectory_13.csv  arm_trajectory_130.csv  arm_trajectory_131.csv  arm_trajectory_132.csv  arm_trajectory_133.csv  arm_trajectory_134.csv  arm_trajectory_135.csv  arm_trajectory_136.csv  arm_trajectory_137.csv  arm_trajectory_138.csv  arm_trajectory_142.csv  arm_trajectory_143.csv  arm_trajectory_144.csv  arm_trajectory_145.csv  arm_trajectory_147.csv  (+444 more)
