<?xml version='1.0' encoding='ASCII'?>
<package format="2">
  <name>moveit_boilerplate</name>

  <version>0.2.0</version>

  <description>Basic functionality for easily building applications on MoveIt! in C++</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/moveit_boilerplate</url>
  <url type="butracker">https://github.com/davetcoleman/moveit_boilerplate/issues</url>
  <url type="repository">https://github.com/davetcoleman/moveit_boilerplate/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>eigen</depend>
  <depend>python-pandas</depend>
  <depend>joy</depend>
  <depend>controller_manager_msgs</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>roslint</depend>
  <depend>tf_conversions</depend>

</package>
